crates/nyx-compiler/tests/snapshots/test_let_statement__compile_multiple_let_bindings.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(r#\"\n        let x = 10;\n        let y = 20;\n        let z = 30;\n        \"#)"
---
Constants:
   0  Int(10)
   1  Int(20)
   2  Int(30)

Globals:
   0  x
   1  y
   2  z

Bytecode:
   0  LOAD_CONSTANT          0  (Int(10))
   3  DEFINE_GLOBAL          0  (x)
   6  LOAD_CONSTANT          1  (Int(20))
   9  DEFINE_GLOBAL          1  (y)
  12  LOAD_CONSTANT          2  (Int(30))
  15  DEFINE_GLOBAL          2  (z)
