crates/nyx-compiler/tests/snapshots/test_let_statement__compile_multiplication.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(\"let result = 10 * 20;\")"
---
Constants:
   0  Int(200)

Globals:
   0  result

Bytecode:
   0  LOAD_CONSTANT          0  (Int(200))
   3  DEFINE_GLOBAL          0  (result)
