crates/nyx-compiler/tests/snapshots/test_let_statement__compile_reuses_constant_across_expressions.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(r#\"\n        let x = 10;\n        let y = x + 10;\n        let z = y + 10;\n        \"#)"
---
Constants:
   0  Int(10)

Globals:
   0  x
   1  y
   2  z

Bytecode:
   0  LOAD_CONSTANT          0  (Int(10))
   3  DEFINE_GLOBAL          0  (x)
   6  LOAD_GLOBAL            0  (x)
   9  LOAD_CONSTANT          0  (Int(10))
  12  BINARY                 0  (ADD)
  14  DEFINE_GLOBAL          1  (y)
  17  LOAD_GLOBAL            1  (y)
  20  LOAD_CONSTANT          0  (Int(10))
  23  BINARY                 0  (ADD)
  25  DEFINE_GLOBAL          2  (z)
