crates/nyx-compiler/tests/snapshots/test_let_statement__integer_division_by_zero_is_not_constant_folded.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(\"let result = 10 / 0;\")"
---
Constants:
   0  Int(10)
   1  Int(0)

Globals:
   0  result

Bytecode:
   0  LOAD_CONSTANT          0  (Int(10))
   3  LOAD_CONSTANT          1  (Int(0))
   6  BINARY                 3  (DIV)
   8  DEFINE_GLOBAL          0  (result)
