crates/nyx-compiler/tests/snapshots/test_let_statement__integer_division_overflow_is_not_constant_folded.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(\"let result = -9223372036854775807 - 1;\")"
---
Constants:
   0  Int(-9223372036854775808)

Globals:
   0  result

Bytecode:
   0  LOAD_CONSTANT          0  (Int(-9223372036854775808))
   3  DEFINE_GLOBAL          0  (result)
